--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
 
-    <h1>Predict the next word</h1>
+    <h1 id="$articleTitle"></h1>
     <p><span id="$prelude"></span></p>
-    <input type="text" id="input" placeholder="next word">
+    <input type="text" id="input" placeholder="predict next word">
 
 </body>
 
