--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Predict the next word</title>
+    <link rel="stylesheet" href="style.css">
     <script type="module" src="index.js"></script>
 </head>
 
 <body>
 
-    <h1 id="$articleTitle"></h1>
-    <p><span id="$prelude"></span></p>
-    <input type="text" id="input" placeholder="predict next word">
+    <h1>Predict the next word</h1>
+    <h2 id="$articleTitle">
+        </h1>
+        <p>
+            <span id="$prelude"></span>
+            <input id="$word" type="text" id="input" placeholder="predict next word">
+        </p>
 
 </body>
 
