--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 
     <h1>Predict the next word</h1>
+    <h2>Score</h2>
+    <p><span id="$score"></span>%</p>
     <h2 id="$articleTitle">
         </h1>
         <p>
