Add placeholder dashes to indicate word length.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </h1>
         <p>
             <span id="$prelude"></span>
-            <input id="$word" type="text" id="input" placeholder="predict next word">
+            <input id="$word" type="text" id="input">
         </p>
 
 </body>
