Checkpoint.  Added language buttons, but not working yet.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
 
-    <h1>Predict the next word</h1>
+    <button id="$en">Predict the next word</button>
+    <button id="$fr">Prédire le mot suivant</button>
+    <button id="$es">Predecir la siguiente palabra</button>
     <h2>Score</h2>
     <p><span id="$score"></span>%</p>
     <h2 id="$articleTitle">
