--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
+    <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.min.css">
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
     <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
     <!--meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"-->
     <title>Predict the next word</title>
-    <!--link rel="stylesheet" href="style.css"-->
+    <link rel="stylesheet" href="style.css">
     <script type="module" src="index.js"></script>
 </head>
 
 <body>
-    <ons-page>
+    <ons-page id="page">
+
         <ons-toolbar>
             <div class=”center”>
                 <select id="$lang" class="select-input">
@@ -24,18 +25,16 @@
             </div>
         </ons-toolbar>
 
-        <div>
-            <div class="card">
-                <h2 id="$articleTitle" class="card__title"></h2>
-                <div class="card__content"><span id="$prelude"></span>
-                    <input id="$word" class="text-input text-input--underbar" type="text" id="input">
-                </div>
-            </div>
-        </div>
-
-
-        <h2>Score</h2>
         <p><span id="$score"></span>%</p>
+        <ons-card>
+            <h2 id="$articleTitle" class="title"></h2>
+            <div class="content"><span id="$prelude"></span>
+                <input id="$word" class="text-input text-input--underbar" type="text" id="input">
+            </div>
+        </ons-card>
+
+        <ons-list id="$scroll"></ons-list>
+
 
     </ons-page>
 
