focus on imput, and make input bigger

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ons-card>
             <h2 id="$articleTitle" class="title"></h2>
             <div class="content"><span id="$prelude"></span>
-                <input id="$word" class="text-input text-input--underbar" type="text"  autocapitalize="off">
+                <input id="$word" class="text-input text-input--underbar" type="text"  autocapitalize="off" autofocus>
             </div>
         </ons-card>
         <ons-range id="$score" disabled></ons-range>
