Add instructions popup

--- a/index.html
+++ b/index.html
@@ -15,22 +15,31 @@
 <body>
     <ons-page id="page">
         <ons-toolbar>
-            <div class=”center”>
+            <div class="center">
                 <select id="$lang" class="select-input">
                     <option value="en">English</option>
                     <option value="fr">Français</option>
                     <option value="es">Español</option>
                 </select>
             </div>
+            <div class=”right”>
+                <ons-toolbar-button>
+                    <ons-icon id="$restart" icon="ion-ios-refresh, material:md-refresh"></ons-icon>
+                </ons-toolbar-button>
+            </div>
         </ons-toolbar>
         <ons-card>
             <h2 id="$articleTitle" class="title"></h2>
             <div class="content"><span id="$prelude"></span>
-                <input id="$word" class="text-input text-input--underbar" type="text"  autocapitalize="off" autofocus>
+                <input id="$word" class="text-input text-input--underbar" type="text" autocapitalize="off" autofocus>
             </div>
         </ons-card>
         <ons-range id="$score" disabled></ons-range>
         <ons-list id="$scroll"></ons-list>
+        <ons-fab position="bottom right">
+            <ons-icon icon="md-plus">
+            </ons-icon>
+        </ons-fab>
     </ons-page>
 
 
