Add restart icon when done with an article.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 </select>
             </div>
             <div class=”right”>
-                <ons-toolbar-button>
-                    <ons-icon id="$restart" icon="ion-ios-refresh, material:md-refresh"></ons-icon>
+                <ons-toolbar-button id="$restart" style="visibility:hidden;">
+                    <ons-icon icon="ion-ios-refresh, material:md-refresh"></ons-icon>
                 </ons-toolbar-button>
             </div>
         </ons-toolbar>
