Show score number. Reset at beginning of game.

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
                 <input id="$word" class="text-input text-input--underbar" type="text" autocapitalize="off" autofocus>
             </div>
         </ons-card>
-        <ons-range id="$score" disabled></ons-range>
+        <ons-range id="$percentSlider" disabled></ons-range>
+        <ons-card>
+            <div class="title"><span id="$percentText"></span>%</div>
+        </ons-card>
         <ons-list id="$scroll"></ons-list>
-        <ons-fab position="bottom right">
-            <ons-icon icon="md-plus">
-            </ons-icon>
-        </ons-fab>
     </ons-page>
 
 
